[gd_scene load_steps=5 format=3 uid="uid://dc75jg62m0dr3"]

[ext_resource type="Script" path="res://child/child.gd" id="1_o16q4"]
[ext_resource type="Texture2D" uid="uid://df8hb6mrpqwrh" path="res://icon.svg" id="2_heq2e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x8ghi"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rbf47"]
radius = 16.0

[node name="Child" type="CharacterBody2D"]
position = Vector2(256, 128)
input_pickable = true
script = ExtResource("1_o16q4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x8ghi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rbf47")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 3.8147e-06)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_heq2e")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
